--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-elements": "^0.19.1",
+    "react-navigation": "^1.5.11",
     "reason-react": "^0.3.4"
   }
 }
